[package]
name = "programme-jedi-padawan"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
leptos_image = "0.2.0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[features]
leptos_image = []

# https://github.com/iamvasanth07/portfolio-leptos/blob/7b4f0f0a5a69ffccccd5e82422bd6ad4c0e378f0/Cargo.toml#L59
